--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,7 +21,7 @@ jobs:
           host: 103.67.186.27
           port: 22
           username: ayat
-          password: Brexdmcs991!
+          password: Brexdcms911!
           sync: true
           script: |
             DIR="/home/ayat/binar-api" \
