--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,5 +27,5 @@ jobs:
             DIR="/home/ayat/binar-api" \
             && cd $DIR \
             && git pull origin main \
-            && npm install \
+            && npm ci \
             && pm2 restart app
