use fnm manual path

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -25,9 +25,9 @@ jobs:
           sync: true
           script: |
             DIR="/home/ayat/binar-api" \
-            BINPATH="/home/ayat/.local/share/fnm/node-versions/v18.17.1/installation/bin" \
+            export PATH="/home/ayat/.local/share/fnm:$PATH"; eval "`fnm env`" \
             && cd $DIR \
             && git pull origin main \
             && source ~/.bashrc \
-            && $BINPATH/npm ci \
-            && $BINPATH/pm2 restart app
+            && npm ci \
+            && pm2 restart app
